--- a/句子.html
+++ b/句子.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u607" class="ax_default box_1">
-        <img id="u607_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u607_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u608" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -38,7 +38,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u610" class="ax_default icon">
-          <img id="u610_img" class="img " src="images/识存学app/u14.png"/>
+          <img id="u610_img" class="img " src="images/单词/u358.png"/>
           <!-- Unnamed () -->
           <div id="u611" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
