--- a/某一语言类型单词_英文.html
+++ b/某一语言类型单词_英文.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u473" class="ax_default box_1">
-        <img id="u473_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u473_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u474" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -38,7 +38,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u476" class="ax_default icon">
-          <img id="u476_img" class="img " src="images/识存学app/u14.png"/>
+          <img id="u476_img" class="img " src="images/某一语言类型单词_英文/u476.png"/>
           <!-- Unnamed () -->
           <div id="u477" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
@@ -92,7 +92,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u488" class="ax_default icon">
-          <img id="u488_img" class="img " src="images/某一语言类型单词_中文/u423.png"/>
+          <img id="u488_img" class="img " src="images/某一语言类型单词_英文/u488.png"/>
           <!-- Unnamed () -->
           <div id="u489" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
@@ -101,7 +101,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u490" class="ax_default icon">
-          <img id="u490_img" class="img " src="images/某一语言类型单词_中文/u423.png"/>
+          <img id="u490_img" class="img " src="images/某一语言类型单词_英文/u488.png"/>
           <!-- Unnamed () -->
           <div id="u491" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
@@ -110,7 +110,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u492" class="ax_default icon">
-          <img id="u492_img" class="img " src="images/某一语言类型单词_中文/u423.png"/>
+          <img id="u492_img" class="img " src="images/某一语言类型单词_英文/u488.png"/>
           <!-- Unnamed () -->
           <div id="u493" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
@@ -119,7 +119,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u494" class="ax_default icon">
-          <img id="u494_img" class="img " src="images/某一语言类型单词_中文/u423.png"/>
+          <img id="u494_img" class="img " src="images/某一语言类型单词_英文/u488.png"/>
           <!-- Unnamed () -->
           <div id="u495" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
@@ -128,7 +128,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u496" class="ax_default icon">
-          <img id="u496_img" class="img " src="images/某一语言类型单词_中文/u423.png"/>
+          <img id="u496_img" class="img " src="images/某一语言类型单词_英文/u488.png"/>
           <!-- Unnamed () -->
           <div id="u497" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
@@ -137,7 +137,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u498" class="ax_default icon">
-          <img id="u498_img" class="img " src="images/某一语言类型单词_中文/u423.png"/>
+          <img id="u498_img" class="img " src="images/某一语言类型单词_英文/u488.png"/>
           <!-- Unnamed () -->
           <div id="u499" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
