--- a/识存学app框架图.html
+++ b/识存学app框架图.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u18" class="ax_default flow_shape">
-        <img id="u18_img" class="img " src="images/识存学app框架图/u18.png"/>
+        <div id="u18_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u19" class="text">
           <p><span>识存学APP</span></p>
