--- a/长按某一单词.html
+++ b/长按某一单词.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u540" class="ax_default box_1">
-        <img id="u540_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u540_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u541" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -35,7 +35,7 @@
 
       <!-- Unnamed (形状) -->
       <div id="u542" class="ax_default icon">
-        <img id="u542_img" class="img " src="images/识存学app/u14.png"/>
+        <img id="u542_img" class="img " src="images/单词/u358.png"/>
         <!-- Unnamed () -->
         <div id="u543" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
