--- a/首页_设置.html
+++ b/首页_设置.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u151" class="ax_default box_1">
-        <img id="u151_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u151_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u152" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -35,7 +35,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u153" class="ax_default flow_shape">
-        <img id="u153_img" class="img " src="images/首页/u118.png"/>
+        <img id="u153_img" class="img " src="images/首页_设置/u153.png"/>
         <!-- Unnamed () -->
         <div id="u154" class="text">
           <p><span>单词</span></p>
@@ -44,7 +44,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u155" class="ax_default flow_shape">
-        <img id="u155_img" class="img " src="images/首页/u120.png"/>
+        <img id="u155_img" class="img " src="images/首页_设置/u155.png"/>
         <!-- Unnamed () -->
         <div id="u156" class="text">
           <p><span>句子</span></p>
@@ -53,7 +53,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u157" class="ax_default flow_shape">
-        <img id="u157_img" class="img " src="images/首页/u122.png"/>
+        <img id="u157_img" class="img " src="images/首页_设置/u157.png"/>
         <!-- Unnamed () -->
         <div id="u158" class="text">
           <p><span>诗歌</span></p>
@@ -65,7 +65,7 @@
 
         <!-- Unnamed (椭圆形) -->
         <div id="u160" class="ax_default ellipse">
-          <img id="u160_img" class="img " src="images/首页/u125.png"/>
+          <img id="u160_img" class="img " src="images/首页/u139.png"/>
           <!-- Unnamed () -->
           <div id="u161" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
@@ -87,7 +87,7 @@
 
         <!-- Unnamed (椭圆形) -->
         <div id="u165" class="ax_default ellipse">
-          <img id="u165_img" class="img " src="images/首页/u125.png"/>
+          <img id="u165_img" class="img " src="images/首页/u139.png"/>
           <!-- Unnamed () -->
           <div id="u166" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
@@ -129,7 +129,7 @@
 
       <!-- Unnamed (椭圆形) -->
       <div id="u174" class="ax_default ellipse">
-        <img id="u174_img" class="img " src="images/首页/u125.png"/>
+        <img id="u174_img" class="img " src="images/首页/u139.png"/>
         <!-- Unnamed () -->
         <div id="u175" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -147,7 +147,7 @@
 
       <!-- Unnamed (椭圆形) -->
       <div id="u178" class="ax_default ellipse">
-        <img id="u178_img" class="img " src="images/首页/u125.png"/>
+        <img id="u178_img" class="img " src="images/首页/u139.png"/>
         <!-- Unnamed () -->
         <div id="u179" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
