--- a/单词.html
+++ b/单词.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u355" class="ax_default box_1">
-        <img id="u355_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u355_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u356" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -38,7 +38,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u358" class="ax_default icon">
-          <img id="u358_img" class="img " src="images/识存学app/u14.png"/>
+          <img id="u358_img" class="img " src="images/单词/u358.png"/>
           <!-- Unnamed () -->
           <div id="u359" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
