--- a/单词_添加语言分类.html
+++ b/单词_添加语言分类.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u382" class="ax_default box_1">
-        <img id="u382_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u382_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u383" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -38,7 +38,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u385" class="ax_default icon">
-          <img id="u385_img" class="img " src="images/识存学app/u14.png"/>
+          <img id="u385_img" class="img " src="images/单词/u358.png"/>
           <!-- Unnamed () -->
           <div id="u386" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
@@ -144,7 +144,7 @@
 
       <!-- Unnamed (形状) -->
       <div id="u406" class="ax_default icon">
-        <img id="u406_img" class="img " src="images/单词/u378.png"/>
+        <img id="u406_img" class="img " src="images/单词_添加语言分类/u406.png"/>
         <!-- Unnamed () -->
         <div id="u407" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
