--- a/句子长按_翻译.html
+++ b/句子长按_翻译.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u642" class="ax_default box_1">
-        <img id="u642_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u642_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u643" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -87,7 +87,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u656" class="ax_default icon">
-          <img id="u656_img" class="img " src="images/识存学app/u14.png"/>
+          <img id="u656_img" class="img " src="images/单词/u358.png"/>
           <!-- Unnamed () -->
           <div id="u657" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
