--- a/授权.html
+++ b/授权.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u92" class="ax_default box_1">
-        <img id="u92_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u92_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u93" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
