--- a/某一语言类型单词_中文.html
+++ b/某一语言类型单词_中文.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u408" class="ax_default box_1">
-        <img id="u408_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u408_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u409" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -38,7 +38,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u411" class="ax_default icon">
-          <img id="u411_img" class="img " src="images/识存学app/u14.png"/>
+          <img id="u411_img" class="img " src="images/单词/u358.png"/>
           <!-- Unnamed () -->
           <div id="u412" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
