--- a/点击其中一篇诗歌.html
+++ b/点击其中一篇诗歌.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u732" class="ax_default box_1">
-        <img id="u732_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u732_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u733" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -38,7 +38,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u735" class="ax_default icon">
-          <img id="u735_img" class="img " src="images/识存学app/u14.png"/>
+          <img id="u735_img" class="img " src="images/某一语言类型单词_英文/u476.png"/>
           <!-- Unnamed () -->
           <div id="u736" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
