--- a/点击翻译语言.html
+++ b/点击翻译语言.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u243" class="ax_default box_1">
-        <img id="u243_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u243_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u244" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -35,7 +35,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u245" class="ax_default flow_shape">
-        <img id="u245_img" class="img " src="images/首页/u118.png"/>
+        <img id="u245_img" class="img " src="images/首页_设置/u153.png"/>
         <!-- Unnamed () -->
         <div id="u246" class="text">
           <p><span>单词</span></p>
@@ -44,7 +44,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u247" class="ax_default flow_shape">
-        <img id="u247_img" class="img " src="images/首页/u120.png"/>
+        <img id="u247_img" class="img " src="images/首页_设置/u155.png"/>
         <!-- Unnamed () -->
         <div id="u248" class="text">
           <p><span>句子</span></p>
@@ -53,7 +53,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u249" class="ax_default flow_shape">
-        <img id="u249_img" class="img " src="images/首页/u122.png"/>
+        <img id="u249_img" class="img " src="images/首页_设置/u157.png"/>
         <!-- Unnamed () -->
         <div id="u250" class="text">
           <p><span>诗歌</span></p>
@@ -65,7 +65,7 @@
 
         <!-- Unnamed (椭圆形) -->
         <div id="u252" class="ax_default ellipse">
-          <img id="u252_img" class="img " src="images/首页/u125.png"/>
+          <img id="u252_img" class="img " src="images/首页/u139.png"/>
           <!-- Unnamed () -->
           <div id="u253" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
@@ -87,7 +87,7 @@
 
         <!-- Unnamed (椭圆形) -->
         <div id="u257" class="ax_default ellipse">
-          <img id="u257_img" class="img " src="images/首页/u125.png"/>
+          <img id="u257_img" class="img " src="images/首页/u139.png"/>
           <!-- Unnamed () -->
           <div id="u258" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
@@ -106,7 +106,7 @@
 
       <!-- Unnamed (形状) -->
       <div id="u261" class="ax_default icon">
-        <img id="u261_img" class="img " src="images/首页/u134.png"/>
+        <img id="u261_img" class="img " src="images/点击翻译语言/u261.png"/>
         <!-- Unnamed () -->
         <div id="u262" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -129,7 +129,7 @@
 
       <!-- Unnamed (椭圆形) -->
       <div id="u266" class="ax_default ellipse">
-        <img id="u266_img" class="img " src="images/首页/u125.png"/>
+        <img id="u266_img" class="img " src="images/首页/u139.png"/>
         <!-- Unnamed () -->
         <div id="u267" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -147,7 +147,7 @@
 
       <!-- Unnamed (椭圆形) -->
       <div id="u270" class="ax_default ellipse">
-        <img id="u270_img" class="img " src="images/首页/u125.png"/>
+        <img id="u270_img" class="img " src="images/首页/u139.png"/>
         <!-- Unnamed () -->
         <div id="u271" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
