--- a/记录.html
+++ b/记录.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u196" class="ax_default box_1">
-        <img id="u196_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u196_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u197" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
