--- a/记录__点击单词时.html
+++ b/记录__点击单词时.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u213" class="ax_default box_1">
-        <img id="u213_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u213_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u214" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
