--- a/诗歌.html
+++ b/诗歌.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u686" class="ax_default box_1">
-        <img id="u686_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u686_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u687" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -38,7 +38,7 @@
 
         <!-- Unnamed (形状) -->
         <div id="u689" class="ax_default icon">
-          <img id="u689_img" class="img " src="images/识存学app/u14.png"/>
+          <img id="u689_img" class="img " src="images/单词/u358.png"/>
           <!-- Unnamed () -->
           <div id="u690" class="text" style="display:none; visibility: hidden">
             <p><span></span></p>
