--- a/长按获取文字.html
+++ b/长按获取文字.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u300" class="ax_default box_1">
-        <img id="u300_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u300_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u301" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
