--- a/长按获取文字__文字选取__单词.html
+++ b/长按获取文字__文字选取__单词.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u331" class="ax_default box_1">
-        <img id="u331_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u331_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u332" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
