--- a/首页.html
+++ b/首页.html
@@ -26,7 +26,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u116" class="ax_default box_1">
-        <img id="u116_img" class="img " src="images/识存学app/u0.png"/>
+        <div id="u116_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u117" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -35,7 +35,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u118" class="ax_default flow_shape">
-        <img id="u118_img" class="img " src="images/首页/u118.png"/>
+        <div id="u118_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u119" class="text">
           <p><span>单词</span></p>
@@ -44,7 +44,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u120" class="ax_default flow_shape">
-        <img id="u120_img" class="img " src="images/首页/u120.png"/>
+        <div id="u120_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u121" class="text">
           <p><span>句子</span></p>
@@ -53,7 +53,7 @@
 
       <!-- Unnamed (矩形) -->
       <div id="u122" class="ax_default flow_shape">
-        <img id="u122_img" class="img " src="images/首页/u122.png"/>
+        <div id="u122_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u123" class="text">
           <p><span>诗歌</span></p>
@@ -129,7 +129,7 @@
 
       <!-- Unnamed (椭圆形) -->
       <div id="u139" class="ax_default ellipse">
-        <img id="u139_img" class="img " src="images/首页/u125.png"/>
+        <img id="u139_img" class="img " src="images/首页/u139.png"/>
         <!-- Unnamed () -->
         <div id="u140" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
@@ -147,7 +147,7 @@
 
       <!-- Unnamed (椭圆形) -->
       <div id="u143" class="ax_default ellipse">
-        <img id="u143_img" class="img " src="images/首页/u125.png"/>
+        <img id="u143_img" class="img " src="images/首页/u139.png"/>
         <!-- Unnamed () -->
         <div id="u144" class="text" style="display:none; visibility: hidden">
           <p><span></span></p>
